--- a/src/main/resources/assets/msqboss/lang/en_us.json
+++ b/src/main/resources/assets/msqboss/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "item.msqboss.bombs": "Bombs",
   "item.msqboss.icicle_dagger": "Icicle Dagger",
   "entity.msqboss.ice_golem": "Ice Golem",
   "item.msqboss.ice_sword": "Ice Sword",
